# tpp

./: .gitignore  README.md  build_mac.py  build_windows.py  pyproject.toml  run.sh  run_filter.sh  run_gene_list.sh  run_plot_all.sh
src/: gui.py  logging_handler.py  main.py  styles.qss  utils.py  worker.py
thermal_proteome_profiling/: main.py
