[tool.poetry]
name = "thermal-proteome-profiling"
version = "0.1.0"
description = ""
authors = ["Jack Coutts <jackwgcoutts@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
